fix(datetime): items are aligned, value selected properly

--- a/core/src/components/picker-column-internal/picker-column-internal.scss
+++ b/core/src/components/picker-column-internal/picker-column-internal.scss
@@ -33,9 +33,9 @@
 }
 
 :host .picker-item {
-  height: 38px;
+  height: 34px;
 
-  line-height: 38px;
+  line-height: 34px;
 
   scroll-snap-align: center;
 }
